--- a/pages/cafe-contacts.css
+++ b/pages/cafe-contacts.css
@@ -26,6 +26,8 @@
 @import url(../blocks/form-input/form-input.css);
 /*form*/
 @import url(../blocks/form/form.css);
+@import url(../blocks/form/__error/form__error.css);
+@import url(../blocks/form/__error/_visible/form__error_visible.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__step/form__step.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
@@ -45,7 +47,6 @@
 @import url(../blocks/form/__control/_active/form__control_active.css);
 @import url(../blocks/form/__control/_type/form__control_type_submit.css);
 @import url(../blocks/form/__control/_type/form__control_type_back.css);
-
 
 /*footer*/
 @import url(../blocks/footer/footer.css);
