--- a/pages/master-class_Step3.css
+++ b/pages/master-class_Step3.css
@@ -26,6 +26,8 @@
 @import url(../blocks/form-input/form-input.css);
 /*form*/
 @import url(../blocks/form/form.css);
+@import url(../blocks/form/__error/form__error.css);
+@import url(../blocks/form/__error/_visible/form__error_visible.css);
 @import url(../blocks/form/__container/form__container.css);
 @import url(../blocks/form/__step/form__step.css);
 @import url(../blocks/form/__instruction/form__instruction.css);
