--- a/blocks/form/__control/form__control.css
+++ b/blocks/form/__control/form__control.css
@@ -5,5 +5,6 @@
   min-width: 154px;
   width: 40%;
   max-width: 204px;
-  transition: background-color .1s ease-in;
+  cursor: pointer;
+  transition: background-color 0.1s ease-in;
 }
